# AdventOfCode

./: .gitignore  Cargo.toml  README.md  readme.md
01/: readme.md
02/: day02.kt  day02_2.kt  readme.md
03/: day03_02_old.kt
04/: readme.md
05/: day05.dyalog
08/: readme.md
1/: day01.kt  day01_2.kt
11/: day11.rs  readme.md
12/: readme.md
13/: day13.rs  readme.md
14/: day14.rs
15/: readme.md
16/: day16.rs
17/: day17.rs
18/: day18_1.st  readme.md
2015/01/: day1.txt  day1_2.kt  readme.md
2015/02/: day2.kt  readme.md
2015/03/: day03.py
2015/04/: day04.py
2015/05/: day05.py
2015/06/: day06.py
2015/07/: day07.py
2015/08/: day08.py
2015/09/: day09.py
2015/10/: day10.py
2015/11/: day11.txt
2015/12/: day12.py
2015/13/: day13.py
2015/14/: day14.py
2015/15/: day15.py
2015/16/: day16.py
2015/17/: day17.py
2015/18/: day18.py
2015/19/: day19.py
2015/20/: day20.py
2015/21/: day21.py
2015/22/: day22.py
2015/23/: day23.py
2015/24/: day24.py
2015/25/: day25.py
2016/: README.md
2017/01/: 01.hs  README.md
2017/02/: 02.hs  README.md
2017/03/: README.md
2017/04/: 04.hs  README.md
2017/05/: 05.py
2017/06/: 06.py
2017/07/: 07.py  README.md
2017/08/: 08.py  README.md
2017/09/: 09.py
2018/01/: 01.hs  README.md
2021/: Cargo.toml
2022/01/day1/: Cargo.toml
2022/01/day1/src/: main.rs
23/: readme.md
24/: day24.rs  readme.md
3/: day03.java  day03_02.kt  readme.md
4/: day04.kt
5/: readme.md
6/: readme.md
7/: input_01.txt  readme.md
8/: day08.kt
src/: day15.rs  day23.rs  lib.rs
(+108 files in other folders)
