[package]
name = "day1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = false
#split-debuginfo = ?
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
rpath = false

[dependencies]
